Adjust floated menu z-index to prevent it from overlpping the admin menu

--- a/css/sp123-omega.styles.css
+++ b/css/sp123-omega.styles.css
@@ -2309,7 +2309,7 @@ form#user-login, form#user-pass {
   #block-superfish-1.sticky-menu {
     position: fixed;
     top: 0;
-    z-index: 1000;
+    z-index: 500;
     margin-top: 0;
     background: white;
     padding-top: 0.5em;
