--- a/sass/components/_main_menu.scss
+++ b/sass/components/_main_menu.scss
@@ -14,7 +14,7 @@
   &.sticky-menu {
     position: fixed;
     top: 0;
-    z-index: 1000;
+    z-index: 500;
     margin-top: 0;
     background: white;
     padding-top: 0.5em;
